# IMEM-NOMAD-plugins

./: LICENSE  MANIFEST.in  README.md  nomad.yaml  pyproject.toml
src/imem_nomad_plugin/: utils.py
src/imem_nomad_plugin/characterization/: __init__.py  schema.py
src/imem_nomad_plugin/general/: __init__.py  schema.py
src/imem_nomad_plugin/movpe/: README.md  __init__.py  schema.py
src/imem_nomad_plugin/movpe/growth_excel/: __init__.py  parser.py
src/imem_nomad_plugin/movpe_old/: schema.py
src/imem_plugin/: __init__.py  nomad_plugin.yaml  utils.py
src/imem_plugin/characterization/: nomad_plugin.yaml  schema.py
src/imem_plugin/movpe/: README.md  nomad_plugin.yaml  schema.py  utils.py
src/imem_plugin/movpe/growth_excel/: nomad_plugin.yaml  parser.py
