[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "imem-nomad-plugin"
dynamic = ["version"]
description = "A plugin for IMEM-CNR NOMAD containing principal techniques."
readme = "README.md"
authors = [
    { name = "Hampus Näsström", email = 'hampus.naesstroem@physik.hu-berlin.de' },
    { name = "Andrea Albino", email = 'andrea.albino@physik.hu-berlin.de' },
    { name = "Sarthak Kapoor", email = 'sarthak.kapoor@ikz-berlin.de' },
    { name = "Sebastian Brückner", email = 'sebastian.brueckner@ikz-berlin.de' },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "nomad-lab>=1.2.1",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "structlog>=22.3.0",
]

[project.license]
file = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/IMEM-CNR-Parma/IMEM-NOMAD-plugins"
"Bug Tracker" = "https://github.com/IMEM-CNR-Parma/IMEM-NOMAD-plugins/issues"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]
